fixed overlapping content when scrolling

--- a/css/bookstore.css
+++ b/css/bookstore.css
@@ -4,6 +4,15 @@ html {
     font-family: 'Playfair Display', serif;
     font-size: 12px;
 }
+.background-block {
+    background-color: #FFE8D6;
+    width: 100%;
+    height: 5em;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+}
 h1 {
     z-index: 2;
     color: #f2f2f2;
@@ -190,9 +199,6 @@ img {
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
 }
-.tablink:first-child {
-
-}
 .tablink:hover {
     background-color: #636e73;
 }
@@ -205,7 +211,7 @@ img {
     border-bottom-left-radius: 8px;
 }
 /* Content Area */
-#BestSellers {background-color: #3c446b; border-top: 5px solid #282f53; display: block;}
+#BestSellers {background-color: #3c446b; border-top: 5px solid #282f53;}
 #NewReleases {background-color: #f0b762; border-top: 5px solid #e09f3e;}
 #Fiction {background-color: #b04345; border-top: 5px solid #9e2a2b;}
 #Nonfiction {background-color: #7d295d; border-top: 5px solid #5f0f40;}
